[~] Fixed Icon Spacing in collapsed state

--- a/stylesheets/components/branded-menu/_branded-menu.scss
+++ b/stylesheets/components/branded-menu/_branded-menu.scss
@@ -70,7 +70,7 @@ $branded-menu__toggle-size: 11px;
       // ----------------------------------------
 
       > a {
-        padding: 1rem 2rem;
+        padding: 1.5rem 2rem;
         font-size: $branded-menu-font-size;
       }
 
